<resources>
    <string name="app_name">Hyper School</string>

    <string name="login">เข้าใช้งาน</string>

    <string name="sub1">หมวดวิชาที่ 1</string>
    <string name="sub2">หมวดวิชาที่ 2</string>
    <string name="sub3">หมวดวิชาที่ 3</string>
    <string name="sub4">หมวดวิชาที่ 4</string>
    <string name="sub5">หมวดวิชาที่ 5</string>
    <string name="sub6">หมวดวิชาที่ 6</string>


    <string name="question">คำถาม ?</string>
    <string name="choice1">ตัวเลือกที่ 1</string>
    <string name="choice2">ตัวเลือกที่ 2</string>
    <string name="choice3">ตัวเลือกที่ 3</string>
    <string name="choice4">ตัวเลือกที่ 4</string>
    <string name="trueAnswer">ตัวเลือกที่ ถูกต้อง</string>


</resources>
